--- a/src/main/resources/cordinus/cordinus_global/LoginForm.fxml
+++ b/src/main/resources/cordinus/cordinus_global/LoginForm.fxml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.MainController">
    <children>
       <Pane layoutX="19.0" layoutY="22.0" prefHeight="357.0" prefWidth="563.0" style="-fx-background-color: #C4A484;">
          <children>
@@ -17,6 +22,12 @@
                      <children>
                         <Label text="Language:" />
                         <Label text="English" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Time:" textAlignment="CENTER" />
+                        <Label fx:id="CurrentTimeLbl" text="Current Time" textAlignment="CENTER" />
                      </children>
                   </HBox>
                   <Button mnemonicParsing="false" onAction="#MainMenuScreenButton" text="Valid" />
