--- a/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
@@ -13,9 +14,12 @@
    <children>
       <HBox alignment="CENTER" layoutX="334.0" layoutY="32.0" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <RadioButton fx:id="AllRB" mnemonicParsing="false" text="All" />
-            <RadioButton fx:id="MonthRB" mnemonicParsing="false" text="Month" />
-            <RadioButton fx:id="WeekRB" mnemonicParsing="false" text="Week" />
+            <RadioButton fx:id="AllRB" mnemonicParsing="false" selected="true" text="All">
+               <toggleGroup>
+                  <ToggleGroup fx:id="ApptRB" />
+               </toggleGroup></RadioButton>
+            <RadioButton fx:id="MonthRB" mnemonicParsing="false" text="Month" toggleGroup="$ApptRB" />
+            <RadioButton fx:id="WeekRB" mnemonicParsing="false" text="Week" toggleGroup="$ApptRB" />
          </children>
       </HBox>
       <TableView fx:id="AppointmentTable" layoutX="10.0" layoutY="100.0" prefHeight="200.0" prefWidth="922.0">
