--- a/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/CustomersScreen.fxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.customer.CustomerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="880.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-width: 3px;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.customer.CustomerController">
    <children>
       <TableView fx:id="CustomerTable" layoutX="68.0" layoutY="100.0" prefHeight="200.0" prefWidth="716.0">
         <columns>
@@ -17,10 +21,10 @@
             <TableColumn fx:id="Countries" minWidth="75.0" prefWidth="99.0" text="Countries" />
         </columns>
       </TableView>
-      <HBox alignment="CENTER" layoutX="300.0" layoutY="321.0" prefHeight="56.0" prefWidth="251.0" spacing="15.0">
+      <HBox alignment="CENTER" layoutX="68.0" layoutY="322.0" prefHeight="56.0" prefWidth="398.0" spacing="15.0" style="-fx-background-color: #572C02; -fx-border-color: #000; -fx-border-width: 5px;">
          <children>
-            <Button mnemonicParsing="false" onAction="#OnAddCustomer" text="ADD" />
-            <Button mnemonicParsing="false" onAction="#OnUpdateCustomer" text="UPDATE" />
+            <Button mnemonicParsing="false" onAction="#OnAddCustomer" text="ADD CUSTOMER" />
+            <Button mnemonicParsing="false" onAction="#OnUpdateCustomer" text="UPDATE CUSTOMER" />
             <Button mnemonicParsing="false" onAction="#OnDeleteCustomer" text="DELETE" />
             <Button mnemonicParsing="false" onAction="#MainMenuReturn" text="BACK" />
          </children>
@@ -30,5 +34,11 @@
             <Font name="Garamond" size="18.0" />
          </font>
       </Label>
+      <HBox alignment="CENTER" layoutX="464.0" layoutY="322.0" prefHeight="56.0" prefWidth="324.0" spacing="10.0" style="-fx-border-color: #000; -fx-background-color: #2F1801; -fx-border-width: 5px;">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="132.0" text="ADD APPOINTMENT " />
+            <Button mnemonicParsing="false" text="UPDATE APPOINTMENT" />
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
