--- a/src/main/resources/cordinus/cordinus_global/hello-view.fxml
+++ b/src/main/resources/cordinus/cordinus_global/hello-view.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #C4A484;" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.MainController">
@@ -15,18 +14,12 @@
             <Image url="@../../../java/cordinus/cordinus_global/image/Globe.png" />
          </image>
       </ImageView>
-      <Button blendMode="SRC_ATOP" layoutX="234.0" layoutY="326.0" mnemonicParsing="false" onAction="#LoginScreenButton" prefHeight="25.0" prefWidth="134.0" scaleX="1.25" scaleY="1.25" style="-fx-border-radius: 20px; -fx-background-radius: 15px; -fx-background-color: #B88A44; -fx-text-fill: white; -fx-translate-z: 2;" text="Proceed to Login" />
+      <Button fx:id="proceedButton" blendMode="SRC_ATOP" layoutX="199.0" layoutY="281.0" mnemonicParsing="false" onAction="#LoginScreenButton" prefHeight="25.0" prefWidth="191.0" scaleX="1.5" scaleY="1.5" style="-fx-border-radius: 20px; -fx-background-radius: 15px; -fx-background-color: #B88A44; -fx-text-fill: white; -fx-translate-z: 2;" text="Proceed" />
       <Label contentDisplay="CENTER" layoutX="206.0" layoutY="17.0" prefHeight="75.0" prefWidth="213.0" text="Cordinus Global">
          <font>
             <Font size="27.0" />
          </font>
       </Label>
-      <HBox alignment="CENTER" layoutX="199.0" layoutY="253.0" prefHeight="64.0" prefWidth="201.0" spacing="16.0">
-         <children>
-            <Button layoutX="199.0" layoutY="277.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" scaleX="1.25" scaleY="1.25" style="-fx-background-radius: 20px 0px 0px 20px; -fx-background-color: #795C32;" text="English" textFill="WHITE" />
-            <Button layoutX="199.0" layoutY="277.0" mnemonicParsing="false" onAction="#frenchMode" prefHeight="25.0" prefWidth="67.0" scaleX="1.25" scaleY="1.25" style="-fx-background-radius: 0px 20px 20px 0px; -fx-background-color: #4B382A;" text="French" textFill="WHITE" />
-         </children>
-      </HBox>
 
    </children>
 </AnchorPane>
