--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="581.0" prefWidth="1039.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-width: 2px;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ReportController">
    <children>
@@ -31,6 +34,17 @@
                               <TableColumn fx:id="Customer_ID" prefWidth="86.0" text="Cust. ID" />
                            </columns>
                         </TableView>
+                        <HBox alignment="CENTER" layoutX="334.0" layoutY="-32.0" prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <RadioButton fx:id="AllRB" mnemonicParsing="false" onAction="#OnRadioButton" selected="true" text="All" textFill="WHITE">
+                                 <toggleGroup>
+                                    <ToggleGroup fx:id="ApptRB" />
+                                 </toggleGroup>
+                              </RadioButton>
+                              <RadioButton fx:id="MonthRB" mnemonicParsing="false" onAction="#OnRadioButton" text="Month" textFill="WHITE" toggleGroup="$ApptRB" />
+                              <RadioButton fx:id="WeekRB" mnemonicParsing="false" onAction="#OnRadioButton" text="Week" textFill="WHITE" toggleGroup="$ApptRB" />
+                           </children>
+                        </HBox>
                      </children>
                   </AnchorPane>
             </content>
