--- a/src/main/resources/cordinus/cordinus_global/LoginForm.fxml
+++ b/src/main/resources/cordinus/cordinus_global/LoginForm.fxml
@@ -31,7 +31,7 @@
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font></Label>
-                        <Label fx:id="CurrentTimeLbl" text="  Current Time" textAlignment="CENTER">
+                        <Label fx:id="CurrentTimeLbl" prefWidth="109.0" text="  Current Time" textAlignment="CENTER">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font></Label>
