--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -8,6 +12,7 @@
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="581.0" prefWidth="1039.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-width: 2px;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ReportController">
    <children>
@@ -20,9 +25,24 @@
           </Tab>
           <Tab text="Contact Schedule">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #000;">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="510.0" prefWidth="997.0" style="-fx-background-color: #000;">
                      <children>
-                        <TableView fx:id="AppointmentTable" layoutX="106.0" layoutY="35.0" prefHeight="355.0" prefWidth="758.0" style="-fx-background-color: #313639;">
+                        <SplitPane dividerPositions="0.18592964824120603" prefHeight="450.0" prefWidth="997.0">
+                          <items>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                 <children>
+                                    <ComboBox layoutX="11.0" layoutY="33.0" prefWidth="150.0" />
+                                    <Label layoutX="45.0" layoutY="6.0" text="Select Contact ">
+                                       <font>
+                                          <Font name="System Bold Italic" size="12.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </AnchorPane>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;" />
+                          </items>
+                        </SplitPane>
+                        <TableView fx:id="AppointmentTable" layoutX="208.0" layoutY="29.0" prefHeight="382.0" prefWidth="758.0" style="-fx-background-color: #313639;">
                            <columns>
                               <TableColumn fx:id="Appointment_ID" prefWidth="75.0" text="Appt. ID" />
                               <TableColumn fx:id="Title" prefWidth="75.0" text="Title" />
@@ -34,7 +54,7 @@
                               <TableColumn fx:id="Customer_ID" prefWidth="86.0" text="Cust. ID" />
                            </columns>
                         </TableView>
-                        <HBox alignment="CENTER" layoutX="334.0" layoutY="-32.0" prefHeight="100.0" prefWidth="200.0">
+                        <HBox alignment="CENTER" layoutX="454.0" layoutY="-36.0" prefHeight="100.0" prefWidth="200.0">
                            <children>
                               <RadioButton fx:id="AllRB" mnemonicParsing="false" onAction="#OnRadioButton" selected="true" text="All" textFill="WHITE">
                                  <toggleGroup>
@@ -45,6 +65,7 @@
                               <RadioButton fx:id="WeekRB" mnemonicParsing="false" onAction="#OnRadioButton" text="Week" textFill="WHITE" toggleGroup="$ApptRB" />
                            </children>
                         </HBox>
+                        <Separator layoutX="184.0" layoutY="1.0" orientation="VERTICAL" prefHeight="446.0" prefWidth="0.0" />
                      </children>
                   </AnchorPane>
             </content>
