--- a/src/main/resources/cordinus/cordinus_global/LoginForm.fxml
+++ b/src/main/resources/cordinus/cordinus_global/LoginForm.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -24,7 +25,7 @@
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font></Label>
-                  <TextField fx:id="PasswordTxt" />
+                  <PasswordField fx:id="PasswordTxt" />
                   <HBox alignment="CENTER" prefHeight="35.0" prefWidth="301.0">
                      <children>
                         <Label fx:id="timeLabel" text="Time:" textAlignment="CENTER">
