--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -9,9 +13,13 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="581.0" prefWidth="1039.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-width: 2px;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ReportController">
@@ -20,7 +28,48 @@
         <tabs>
           <Tab text="Appt Total(s)">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <SplitPane dividerPositions="0.22311557788944725" layoutX="2.0" layoutY="-1.0" prefHeight="451.0" prefWidth="997.0">
+                          <items>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;">
+                                 <children>
+                                    <ChoiceBox layoutX="35.0" layoutY="40.0" prefWidth="150.0" />
+                                    <ComboBox layoutX="35.0" layoutY="259.0" prefWidth="150.0" />
+                                    <TextField disable="true" layoutX="36.0" layoutY="389.0" />
+                                    <Label layoutX="35.0" layoutY="7.0" prefHeight="17.0" prefWidth="149.0" text="Months:" textAlignment="CENTER" textFill="WHITE">
+                                       <font>
+                                          <Font name="System Bold Italic" size="18.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="36.0" layoutY="362.0" prefHeight="17.0" prefWidth="149.0" text="Totals:" textAlignment="CENTER" textFill="WHITE">
+                                       <font>
+                                          <Font name="System Bold Italic" size="18.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="36.0" layoutY="232.0" prefHeight="17.0" prefWidth="149.0" text="Type:" textAlignment="CENTER" textFill="WHITE">
+                                       <font>
+                                          <Font name="System Bold Italic" size="18.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </AnchorPane>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;">
+                                 <children>
+                                    <TableView layoutX="62.0" layoutY="50.0" prefHeight="368.0" prefWidth="646.0">
+                                      <columns>
+                                        <TableColumn prefWidth="133.0" text="C1" />
+                                        <TableColumn prefWidth="127.0" text="C2" />
+                                          <TableColumn prefWidth="125.0" text="C2" />
+                                          <TableColumn prefWidth="147.0" text="C2" />
+                                          <TableColumn prefWidth="113.0" text="C2" />
+                                      </columns>
+                                    </TableView>
+                                 </children>
+                              </AnchorPane>
+                          </items>
+                        </SplitPane>
+                     </children></AnchorPane>
             </content>
           </Tab>
           <Tab text="Contact Schedule">
@@ -29,10 +78,10 @@
                      <children>
                         <SplitPane dividerPositions="0.18592964824120603" prefHeight="450.0" prefWidth="997.0">
                           <items>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;">
                                  <children>
                                     <ComboBox layoutX="11.0" layoutY="33.0" prefWidth="150.0" />
-                                    <Label layoutX="45.0" layoutY="6.0" text="Select Contact ">
+                                    <Label layoutX="45.0" layoutY="6.0" text="Select Contact " textFill="WHITE">
                                        <font>
                                           <Font name="System Bold Italic" size="12.0" />
                                        </font>
@@ -72,7 +121,50 @@
           </Tab>
             <Tab text="Remaining Appointments">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Separator layoutX="451.0" layoutY="-3.0" orientation="VERTICAL" prefHeight="451.0" prefWidth="31.0" />
+                        <BarChart layoutX="14.0" layoutY="29.0" prefHeight="392.0" prefWidth="408.0">
+                          <xAxis>
+                            <CategoryAxis prefHeight="15.0" prefWidth="351.0" side="TOP" tickLabelFill="#fbfcf8">
+                                 <tickLabelFont>
+                                    <Font size="19.0" />
+                                 </tickLabelFont>
+                              </CategoryAxis>
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis side="LEFT" tickLabelFill="WHITE" />
+                          </yAxis>
+                        </BarChart>
+                        <GridPane layoutX="538.0" layoutY="69.0" prefHeight="301.0" prefWidth="427.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <TextField disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField disable="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <TextField disable="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <TextField disable="true" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                              <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 15 mins Appointments:" textFill="WHITE" GridPane.rowIndex="1" />
+                              <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 30 mins Appointments:" textFill="WHITE" GridPane.rowIndex="3" />
+                              <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 45 mins Appointments:" textFill="WHITE" GridPane.rowIndex="5" />
+                              <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 60 mins Appointments:" textFill="WHITE" GridPane.rowIndex="7" />
+                           </children>
+                        </GridPane>
+                        <Label layoutX="151.0" layoutY="413.0" prefHeight="17.0" prefWidth="255.0" text="Appointments Booked Per Day" textAlignment="CENTER" textFill="WHITE" />
+                     </children></AnchorPane>
                </content>
             </Tab>
         </tabs>
